--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,75 +1,28 @@
-alabaster==0.7.13
-apeye==1.3.0
-apeye-core==1.1.1
-asttokens==2.2.1
-autodocsumm==0.2.10
-Babel==2.11.0
-backcall==0.2.0
-beautifulsoup4==4.11.2
-CacheControl==0.12.11
-certifi==2022.12.7
-charset-normalizer==3.0.1
-cloud-sptheme==1.10.1.post20200504175005
-cssutils==2.6.0
-decorator==5.1.1
-dict2css==0.3.0
-docutils==0.18.1
-domdf-python-tools==3.6.0
-executing==1.2.0
-html5lib==1.1
-idna==3.4
-imagesize==1.4.1
-importlib-metadata==6.0.0
-ipython==8.12.1
-jedi==0.18.2
-Jinja2==3.0.0
-latexcodec==2.0.1
-lockfile==0.12.2
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-msgpack==1.0.4
-natsort==8.2.0
-packaging==23.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-platformdirs==3.0.0
-prompt-toolkit==3.0.38
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pybtex==0.24.0
-pybtex-docutils==1.0.2
-Pygments==2.14.0
-pytz==2022.7.1
-PyYAML==6.0
-requests==2.28.2
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
-six==1.16.0
-snowballstemmer==2.2.0
-soupsieve==2.4
-Sphinx==6.1.3
-sphinx-carousel==1.2.0
-sphinx-copybutton==0.5.1
-sphinx-jinja2-compat==0.2.0
-sphinx-prompt==1.6.0
-sphinx-rtd-theme==1.2.0
-sphinx-tabs==3.4.1
-sphinx-toolbox==3.4.0
-sphinx_autodoc_typehints==1.22
-sphinxcontrib-applehelp==1.0.4
-sphinxcontrib-bibtex==2.5.0
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==2.0.1
-sphinxcontrib-jquery==2.0.0
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.5
-stack-data==0.6.2
-tabulate==0.9.0
-traitlets==5.9.0
-typing_extensions==4.5.0
-urllib3==1.26.14
-wcwidth==0.2.6
-webencodings==0.5.1
-zipp==3.14.0
+cloud-sptheme
+cssutils
+docutils
+ipython
+Jinja2
+latexcodec
+lockfile
+MarkupSafe
+matplotlib-inline
+pybtex
+pybtex-docutils
+Sphinx
+sphinx-carousel
+sphinx-copybutton
+sphinx-jinja2-compat
+sphinx-prompt
+sphinx-rtd-theme
+sphinx-tabs
+sphinx-toolbox
+sphinx_autodoc_typehints
+sphinxcontrib-applehelp
+sphinxcontrib-bibtex
+sphinxcontrib-devhelp
+sphinxcontrib-htmlhelp
+sphinxcontrib-jquery
+sphinxcontrib-jsmath
+sphinxcontrib-qthelp
+sphinxcontrib-serializinghtml
